Fix page overflow of playlist && Change playlist position from absolute to fixed

--- a/src/main.css
+++ b/src/main.css
@@ -27,6 +27,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
@@ -1092,8 +1093,13 @@ h1 {
 .audio {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   margin-left: 260px;
+  top: 18%;
+
+  transform: translateX(0);
+  opacity: 1;
+  transition-duration: 0.3s;
   /* margin-top: 295px; */
 
   /* display: none; */
@@ -1101,6 +1107,16 @@ h1 {
   /* animation: floatEffect 3s linear infinite; */
 
   /* border: red solid 1px; */
+}
+
+.audio-hidden {
+  position: fixed;
+  top: 18%;
+  /* display: none; */
+
+  transform: translateX(500px);
+  opacity: 0;
+  transition-duration: 0.3s;
 }
 
 @keyframes floatEffect {
